k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: s3-playground
  labels:
    app: s3-playground
    environment: production
