k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: image-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - s3user
                - -d
                - s3playground
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - s3user
                - -d
                - s3playground
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: postgres-storage
          emptyDir: { }
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: image-storage
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
