k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-playground-nodeport
  namespace: s3-playground
  labels:
    app: s3-playground
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: s3-playground
