k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-playground-service
  namespace: s3-playground
  labels:
    app: s3-playground
    component: backend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: s3-playground
    component: backend
  sessionAffinity: None
